# structured-random-phase-retrieval-2

./: .gitignore  README.md  pyproject.toml
deepinv/models/: complex.py
deepinv/optim/: phase_retrieval.py
deepinv/physics/: compressed_sensing.py  phase_retrieval.py  structured_random.py
deepinv/tests/: test_deprecated.py  test_physics.py
deepinv/utils/: plotting.py
experiment/config/: config.yaml
experiment/scripts/: recon.py  time.py
experimental/config/: config.yaml
experimental/scripts/: recon.py  time.py
src/: cs.py  pr.py  sr.py  utils.py
