[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-random-phase-retrieval-2"
authors = [{name="Zhiyuan Hu", email="zhiyuan.hu@epfl.ch"}]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
version = "0.3.4"
dependencies = [
    "numpy<2.0",
    "matplotlib",
    "tqdm",
    "torch>=2.2.0",
    "torchvision",
    "torchmetrics",
    "einops",
    "scipy",
    "natsort",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "black>=25.1.0",
    "ruff>=0.11.3",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.5",
    "deepinv>=0.3.6",
    "hadamard-transform>=0.1.3",
    "requests",
    "h5py",
    "natsort",
    "pytest>=8.3.5",
    "loguru>=0.7.3",
    #"fast-hadamard-transform>=1.0.4.post1",
]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.packages]
find = { where = ["."] }

[tool.uv.extra-build-dependencies]
fast-hadamard-transform = ["torch"]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://deepinv.github.io/"
Source = "https://github.com/deepinv/deepinv"
Tracker = "https://github.com/deepinv/deepinv/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "coverage",
]

doc = [
    "sphinx",
    "sphinx_gallery",
    "pydata_sphinx_theme",
    "sphinxemoji",
    "sphinx_copybutton",
    "sphinx_autoapi",
    "sphinx-design",
    "sphinx_sitemap<2.7.0",
    "sphinxcontrib.bibtex"
]

lint = [
    "black",
    "ruff"
]

# optional dependencies for specific denoisers, physics or transforms
denoisers = [
    "bm3d",
    "bm4d<4.2.4",
    "timm",
    "PyWavelets",
    "ptwt",
    "FrEIA",
    "pyiqa",
    "kornia",
    "torchkbnufft",
    "libcpab",
    "sigpy",
    "astra-toolbox>=2.2.0,!=2.3.0; platform_system=='Linux'",
]

# optional dependencies for specific datasets
dataset = [
    "datasets",
    "pandas",
    "pydicom",
    "mat73",
    "scipy",
]

# optional dependencies for training
training = [
    "wandb",
    "mlflow",
]



#####################################################################
# Pytest configuration and coverage reporting

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "deepinv/tests",
]
markers = [
    "slow",
]

[tool.coverage.run]
branch = true
omit = ['examples/*', 'deepinv/tests']  # define paths to omit

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if self.mlflow_vis",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["UP006", "F401", "B905", "B006", "RUF008", "RUF012", "TID253", "UP004", "UP007", "UP045", "FA100", "FA102"]

[tool.ruff.lint.per-file-ignores]
# NOTE: Rule F401 is ruff's unused imports rule.
"__init__.py" = ["F401"]
"examples/**/*" = ["TID253"]

[tool.ruff.lint.flake8-tidy-imports]
# Modules that slow down startup and should be imported lazily
banned-module-level-imports = ["timm", "torchmetrics", "matplotlib", "datasets", "FrEIA", "bm3d", "einops", "wandb", "pandas", "kornia", "ptwt", "pywt", "astra", "torchkbnufft"]
